--- a/src/app/modules/FeesManagement/student/addstudent/addstudent.component.html
+++ b/src/app/modules/FeesManagement/student/addstudent/addstudent.component.html
@@ -134,7 +134,7 @@
                                 </span>
                                 <mat-form-field appearance="outline" fxFlex>
                                     <mat-label>Email Id</mat-label>
-                                    <input formControlName="Emailaddress" autocomplete="Off" #Pincode matInput
+                                    <input formControlName="EmailAddress" autocomplete="Off" #Pincode matInput
                                         maxlength="50">
                                 </mat-form-field>
                                 <mat-form-field appearance="outline" fxFlex>
