--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
@@ -2,7 +2,9 @@
 //     margin:12px;
 //     min-height: 81vh;
 // }
-
+div{
+    max-width: 60%;
+}
 card{
     min-height: 100px;
     max-height: 100px;
