--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -8,10 +8,25 @@
         //box-shadow: 5px 0px lightblue;
 
     }
-
-    mat-drawer-content {
-        margin-top: 70px;
+    .top70{
+        top:70px;
+        max-width: 81%;
     }
+    .top80{
+        top:120px;
+        max-width: 100%;
+    }
+    // mat-drawer-content {
+    //     margin-top: 70px;
+    // }
+    // mat-drawer-content {
+    //     top:70px;
+    //     padding: 12px;
+    //     display: flex;
+    //     flex-direction: column;
+    //     align-items: flex-start;
+    //     max-width: 100%;
+    //   }
 
     app-sidebar {
         //width: calc(100vw - 34px);
