--- a/src/app/modules/FeesManagement/feesmanagementhome/feesmanagementhome.component.html
+++ b/src/app/modules/FeesManagement/feesmanagementhome/feesmanagementhome.component.html
@@ -1,11 +1,11 @@
-<app-header (toggleSideBarForme)="sideBarToggler()"></app-header>
+<FeeHeader (toggleSideBarForme)="sideBarToggler()"></FeeHeader>
 <mat-drawer-container>
     <mat-drawer mode="side" [opened]="openSideBar">
-        <app-sidebar></app-sidebar>
+        <FeeSidebar></FeeSidebar>
     </mat-drawer>
     <mat-drawer-content>
         <alert></alert>
         <router-outlet></router-outlet>
     </mat-drawer-content>
 </mat-drawer-container>
-<app-footer></app-footer>
+<FeeFooter></FeeFooter>
