--- a/src/app/modules/define-pages/displaypage/displaypage.component.html
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.html
@@ -10,9 +10,8 @@
             <div class="child1">
                 <p [innerHTML]="PageBody|encodeHTML"></p>
             </div>
-            <div class="child2">
-
-            </div>
+            <!-- <div class="child2">
+            </div> -->
         </div>
         <mat-card-actions>
             <button mat-button (click)="back()">
