--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.html
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.html
@@ -3,8 +3,8 @@
   <mat-card-content>
     <!-- <form [formGroup]="searchForm"> -->
       <mat-spinner *ngIf="loading"></mat-spinner>
-    <div class="example-header">
-      <mat-form-field fxFlex [style.width.px]=350>
+    <div>
+      <mat-form-field fxFlex="82">
         <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="Search album" autocomplete="off">
       </mat-form-field>
     </div>
